--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link href="./assets/views/css/style.css" rel="stylesheet"/>-->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+
+
 
 </head>
 <body>
-  <!--<app-root></app-root>-->
-  <a href="/assets/index.html">My Assignment 2 page</a>
+  <app-root></app-root>
+  <!--<a href="../../app.component.html">My Assignment 2 page</a>-->
 </body>
 </html>
