fixed register function

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,8 @@
 <body>
   <app-root></app-root>
   <!--<a href="../../app.component.html">My Assignment 2 page</a>-->
+
+  <!--<script>  $(function() {    $( "#sortable" ).sortable();  });</script>-->
+
 </body>
 </html>
