--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,18 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!--<link href="./assets/views/css/style.css" rel="stylesheet"/>-->
+  <link href="./assets/views/css/style.css" rel="stylesheet"/>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
-
+  <!--<script-->
+    <!--src="https://code.jquery.com/jquery-3.3.1.js"-->
+    <!--integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="-->
+    <!--crossorigin="anonymous"></script>-->
+  <!--<script-->
+    <!--src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"-->
+    <!--integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="-->
+    <!--crossorigin="anonymous">-->
+  <!--</script>-->
 
 </head>
 <body>
